# RPIPicoWIoTCourse

./: .gitmodules  README.md
2-PicoSetup/LEDControl/: CMakeLists.txt
2-PicoSetup/LEDControl/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
2-PicoSetup/LEDControl/src/: CMakeLists.txt  MQTTRouterLED.cpp  MQTTRouterLED.h  main.cpp
4-Connectivity/HTTPGet/: CMakeLists.txt  FreeRTOS-coreMQTT.cmake
4-Connectivity/HTTPGet/src/: CMakeLists.txt  TCPTransport.h  TestTrans.cpp  TestTrans.h
4-Connectivity/MQTTConnect/: CMakeLists.txt
4-Connectivity/MQTTConnect/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
4-Connectivity/MQTTConnect/src/: CMakeLists.txt  MQTTAgent.cpp  MQTTAgent.h  MQTTAgentObserver.h
4-Connectivity/Wifi/: CMakeLists.txt
4-Connectivity/Wifi/src/: CMakeLists.txt  main.cpp
5-Publish/LifeCycle/: CMakeLists.txt  FreeRTOS-coreMQTT-Agent.cmake
5-Publish/LifeCycle/port/twinThing/: MQTTConfig.h
5-Publish/LifeCycle/src/: MQTTAgent.h  TCPTransport.cpp  main.cpp
5-Publish/PubLED/: CMakeLists.txt
5-Publish/PubLED/src/: CMakeLists.txt  LEDAgent.cpp  LEDAgent.h  MQTTAgent.cpp  MQTTAgent.h  MQTTAgentObserver.cpp  MQTTInterface.h  main.cpp
6-Subscribe/AssPubSubLEDToggle/: tiny-json.cmake
6-Subscribe/AssPubSubLEDToggle/py/: toggle.py
6-Subscribe/AssPubSubLEDToggle/src/: LEDAgent.cpp  MQTTAgent.cpp  MQTTRouterLED.cpp  MQTTTopicHelper.cpp  SwitchObserver.h  main.cpp
6-Subscribe/GrpPubSubLED/: CMakeLists.txt
6-Subscribe/GrpPubSubLED/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
6-Subscribe/GrpPubSubLED/py/: grpOff.py  grpOn.py  listen.py  off.py  on.py
6-Subscribe/GrpPubSubLED/src/: CMakeLists.txt  LEDAgent.cpp  LEDAgent.h  MQTTRouterGrpLED.cpp  MQTTRouterGrpLED.h  MQTTRouterLED.cpp  MQTTRouterLED.h  main.cpp
6-Subscribe/PubSubLED/: CMakeLists.txt
6-Subscribe/PubSubLED/port/CoreMQTT/: core_mqtt_config.h
6-Subscribe/PubSubLED/src/: CMakeLists.txt  LEDAgent.h  MQTTAgent.h  MQTTInterface.h  MQTTRouter.cpp  MQTTRouter.h  MQTTRouterLED.h  MQTTTopicHelper.h
6-Subscribe/PyPublish/: on.py
7-Security/HTTPSGet/: CMakeLists.txt
7-Security/HTTPSGet/port/wolfssl/: user_settings.h
7-Security/HTTPSGet/src/: CMakeLists.txt  TCPTransport.cpp  TLSTransBlock.cpp  TLSTransBlock.h  TestTrans.cpp  Transport.cpp
7-Security/PubSubTLS/: CMakeLists.txt
7-Security/PubSubTLS/port/CoreMQTT-Agent/: core_mqtt_agent_config.h
7-Security/PubSubTLS/port/wolfssl/: myTime.c  user_settings.h
7-Security/PubSubTLS/src/: CMakeLists.txt  LEDAgent.cpp  MQTTAgent.cpp  MQTTAgent.h  TCPTransport.h  TLSTransBlock.cpp  Transport.cpp  Transport.h  main.cpp
8-State/twinThingPicoWExample/: CMakeLists.txt
8-State/twinThingPicoWExample/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
8-State/twinThingPicoWExample/py/: get.py  listen.py  off.py  on.py  ping1.py  pingAll.py  set.py
8-State/twinThingPicoWExample/src/: CMakeLists.txt  LEDAgent.cpp  LEDAgent.h  LEDState.cpp  LEDState.h  MQTTRouterLED.cpp  MQTTRouterLED.h  main.cpp
config/Flespi/: Client.bat  client.sh  device1.bat  device1.sh  device2.sh
config/Mosquitto/: client.bat  client.sh  device1.bat  device1.sh
